# solver-playground

./: CMakeLists.txt  csr_matrix.h  main.cpp  solve_cusp.cu  solve_cusp.h  solve_cusparse.cu  solve_cusparse.h  solve_wsmp.cpp  solve_wsmp.h
data/: EN_innsbruck.csr  EN_innsbruck.mtx  env.sh  goefis.csr  goefis.mm  wsmp.lic
thrust/detail/backend/cuda/: synchronize.h
